--- a/app/src/list/res/menu/device_list_activity_actions.xml
+++ b/app/src/list/res/menu/device_list_activity_actions.xml
@@ -3,4 +3,6 @@
     <item android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         android:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_about"
+        android:title="@string/action_about"/>
 </menu>
