--- a/app/src/main/res/menu/console_activity_actions.xml
+++ b/app/src/main/res/menu/console_activity_actions.xml
@@ -8,4 +8,6 @@
         android:title="@string/action_clear"/>
     <item android:id="@+id/action_setting"
         android:title="@string/action_setting"/>
+    <item android:id="@+id/action_about"
+        android:title="@string/action_about"/>
 </menu>
